# rust-gam

./: Cargo.toml  README.md
src/: entity.rs  game.rs  inputHandler.rs  input_handler.rs  main.rs  player.rs
src/resources/PlayerSprites/: SpriteEditable.piskel
