[package]

name = "rust-gam"
version = "0.1.0"
authors = [
    "hueblu <hue#2552>",
    "Pengalu <suop#6295>"
]

[[bin]]
name = "rust-gam"

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.41.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.79.0"
find_folder = "0.3.0"
piston_window = "0.121.0"